# SkillSwap

./: .gitignore  API_LIST.md  README.md  start_servers.bat
backend/: pyproject.toml  setup.sh
backend/core/: settings.py  urls.py
backend/follows/: models.py  serializers.py  urls.py  views.py
backend/follows/migrations/: 0001_initial.py
backend/notifications/: models.py  serializers.py  utils.py  views.py
backend/notifications/migrations/: 0001_initial.py
backend/reviews/: models.py  pagination.py  serializers.py  urls.py  views.py
backend/reviews/migrations/: 0001_initial.py
backend/skills/: admin.py  models.py  pagination.py  serializers.py  urls.py  views.py
backend/skills/migrations/: 0001_initial.py
backend/swaps/: models.py  pagination.py  serializers.py  urls.py  views.py
backend/swaps/migrations/: 0001_initial.py
backend/users/: models.py  serializers.py  views.py
backend/users/migrations/: 0001_initial.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/common/: Pagination.jsx  SkillCard.jsx  StarRating.jsx
frontend/src/components/layout/: Navbar.jsx
frontend/src/context/: AuthContext.jsx
frontend/src/pages/: CategoryDetailPage.jsx  CreateSkillPage.jsx  EditProfilePage.jsx  EditSkillPage.jsx  FeedPage.jsx  HomePage.jsx  LeaderboardPage.jsx  LoginPage.jsx  NotificationsPage.jsx  ProfilePage.jsx  RegisterPage.jsx  ReviewsPage.jsx  SkillDetailPage.jsx  SkillsPage.jsx  SwapDetailPage.jsx  SwapsPage.jsx
frontend/src/services/: api.js
