[project]
name = "skillswap"
version = "0.1.0"
description = "SkillSwap - Bacariq Mubadiləsi Platformasi"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.2.0",
    "django-cleanup>=9.0.0",
    "django-cors-headers>=4.7.0",
    "djangorestframework>=3.16.0",
    "djangorestframework-simplejwt>=5.5.0",
    "drf-spectacular>=0.28.0",
    "pillow>=11.0.0",
]
